--- a/csv-table-reader/src/style/app.css
+++ b/csv-table-reader/src/style/app.css
@@ -5,3 +5,11 @@
 	background-size: cover;
 	align-items: center;
 }
+
+.imagem {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 30px 0px;
+}
